# hf-pcal95555-driver

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Kconfig  Makefile  README.md  index.html  version_selector.html
.github/workflows/: ci-docs-linkcheck.yml  esp32-component-ci.yml
_config/: 404.html  Doxyfile  _config.yml  lychee.toml
_config/doxygen-extensions/: README.md
cmake/: hf_pcal95555Config.cmake.in  hf_pcal95555_build_settings.cmake
components/pcal95555/: CMakeLists.txt  idf_component.yml
development/: Kconfig  feed.xml  index.html  robots.txt  sitemap.xml  version_info.json
development/api/: classMockI2C-members.html  classMockI2C.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  index.html  inherit_graph_0.map  md_docs_2api__reference.html  md_docs_2cmake__integration.html  md_docs_2configuration.html  md_docs_2examples.html  md_docs_2index.html  md_docs_2installation.html  md_docs_2platform__integration.html  md_docs_2quickstart.html  md_docs_2troubleshooting.html  pcal95555_8ipp.html  pcal95555_8ipp__incl.map
development/api/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_19.js  all_1a.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_24.js  all_25.js  all_27.js  all_28.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_c.js  all_d.js  all_e.js  all_f.js  pages_0.js  pages_10.js  pages_2.js  pages_5.js  pages_6.js  pages_b.js  searchdata.js
development/assets/js/: just-the-docs.js  search-data.json
development/docs/: api_reference.html  configuration.html  examples.html  examples.md  guidelines.html  hardware_overview.html  index.html  installation.html  platform_integration.html  platform_integration.md  quickstart.html  quickstart.md
development/docs/api_reference/: index.html
development/docs/cmake_integration/: index.html
development/docs/configuration/: index.html
development/docs/doxygen/: classMockI2C__inherit__graph.map  classes.html  index.html  inherits.html  md_docs_2cmake__integration.html  md_docs_2configuration.html  md_docs_2examples.html  md_docs_2guidelines.html  md_docs_2hardware__setup.html  md_docs_2index.html  md_docs_2installation.html  md_docs_2platform__integration.html  md_docs_2quickstart.html  md_docs_2troubleshooting.html
development/docs/doxygen/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_26.js  all_2a.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  pages_1.js  pages_5.js  pages_8.js  (+4 more)
development/docs/examples/: index.html
development/docs/hardware_setup/: index.html
development/docs/installation/: index.html
development/docs/platform_integration/: index.html
development/docs/quickstart/: index.html
development/docs/troubleshooting/: index.html
development/doxs/development/: annotated.html  classMockI2C__coll__graph.map  classMockI2C__coll__graph.md5  classMockI2C__inherit__graph.md5  dir_49e56c817e5e54854c35e136979f97ca.html  doxygen_crawl.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.md5  md_docs_2api__reference.html  md_docs_2cmake__integration.html  md_docs_2configuration.html  md_docs_2examples.html  md_docs_2hardware__setup.html  md_docs_2index.html  md_docs_2installation.html  md_docs_2platform__integration.html  md_docs_2quickstart.html  md_docs_2troubleshooting.html  pcal95555_8ipp__incl.md5
development/doxs/development/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_22.js  all_3.js  all_4.js  all_5.js  all_6.js  (+16 more)
development/examples/esp32/: CMakeLists.txt  README.md  app_config.yml  index.html  sdkconfig
development/examples/esp32/components/hf_pcal95555/: CMakeLists.txt  idf_component.yml
docs/: api_reference.md  cmake_integration.md  configuration.md  contributing.md  doxygen-extensions.md  examples.md  guidelines.md  hardware_overview.md  hardware_setup.md  index.md  installation.md  platform_integration.md  quickstart.md  troubleshooting.md
doxs/development/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  files.html  index.html  inherit_graph_0.md5  inherits.html  md_docs_2api__reference.html  md_docs_2examples.html  md_docs_2hardware__overview.html  md_docs_2hardware__setup.html  md_docs_2index.html  md_docs_2installation.html  md_docs_2platform__integration.html  md_docs_2quickstart.html  md_docs_2troubleshooting.html  pages.html
doxs/development/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1f.js  all_2.js  all_20.js  all_22.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  pages_13.js  pages_3.js  pages_4.js  pages_6.js  pages_7.js  pages_9.js  pages_a.js  searchdata.js
examples/: README.md
examples/arduino/: ArduinoExample.ino
examples/common/: DummyBus.hpp
examples/esp32/: CMakeLists.txt  README.md  app_config.yml  main.cpp  sdkconfig
examples/esp32/components/hf_pcal95555/: CMakeLists.txt  idf_component.yml
examples/esp32/docs/: comprehensive_test.md
examples/esp32/main/: CMakeLists.txt  Esp32Pcal9555Bus.hpp  PCAL9555ComprehensiveTest.cpp  TestFramework.h  esp32_pcal95555_bus.hpp  esp32_pcal95555_test_config.hpp  main.cpp  pcal95555_comprehensive_test.cpp  pcal95555_led_animation.cpp
examples/stm32/: main.cpp
inc/: pcal95555.hpp  pcal95555_i2c_interface.hpp  pcal95555_kconfig.hpp  pcal95555_version.h.in
src/: pacl95555.hpp  pcal95555.cpp  pcal95555.hpp  pcal95555.ipp  pcal95555_test.cpp
test/: pcal95555_test.cpp
(+10 files in other folders)
